# parallel_distributed_calculate

./: README.md
parallel_distributed/: CMakeLists.txt
parallel_distributed/include/: common.hpp  network_config.h
parallel_distributed/src/: UDP.cpp  basic.cpp  common.cpp  main.cpp  speed_up.cpp
